<!--
Copyright (C) 2017 Katarina Sheremet

This file is part of Delern.

Delern is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
any later version.

Delern is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with  Delern.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sign_out">Sign Out</string>
    <string name="logo_image_view">Logo Image</string>

    <!-- Invitation messages -->
    <string name="invite_menu_label">Invite Friends</string>
    <string name="invitation_title">Delern Invite</string>
    <string name="invitation_email_html_content" tools:ignore="TypographyQuotes"><![CDATA[<!DOCTYPE html>
<html>
    <body>
        I invite you to install Delern, a spaced repetition learning app,
        which will allow you to learn quickly and easily!<br/><br/>

        Proceed to
        <a href="https://play.google.com/store/apps/details?id=org.dasfoo.delern">
        https://play.google.com/store/apps/details?id=org.dasfoo.delern</a>
        to install it from Google Play!<br/><br/>

        After install, follow Delern latest news on:<br/>
        Facebook: <a href="http://fb.me/das.delern">https://fb.me/das.delern</a><br/>
        VKontakte: <a href="https://vk.com/delern">https://vk.com/delern</a><br/>
        Google+: <a href="https://plus.google.com/communities/104603840044649051798">https://plus.google.com/communities/104603840044649051798</a><br/>
        Twitter: <a href="https://twitter.com/dasdelern">https://twitter.com/dasdelern</a>
    </body>
</html>]]></string>
    <string name="invite_user_sharing_deck_message">This user hasn\'t installed Delern yet. Do you want to sent an invite?</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="invite">Invite</string>
    <string name="deck_menu_description">Menu for operations with decks and cards</string>
    <string name="flip_the_card_message">Flip the card</string>
    <string name="number_of_cards">Number of cards: %d</string>
    <string name="card_watched_text">Watched: %d</string>

    <!-- Deck menu -->
    <string name="deck_settings_menu">Settings</string>
    <string name="edit_cards_deck_menu">Edit cards</string>
    <string name="deck_share_menu">Share</string>

    <!-- Deck Sharing -->
    <string name="sharing_imageview_description">Sharing options</string>
    <string name="share_people_textview">People</string>
    <string name="can_edit_text">Can Edit</string>
    <string name="can_view_text">Can View</string>
    <string name="no_access_text">No Access</string>
    <string name="owner_access_text">Owner</string>
    <string-array name="share_permissions_spinner_text">
        <item>@string/can_edit_text</item>
        <item>@string/can_view_text</item>
    </string-array>
    <string-array name="user_permissions_spinner_text">
        <item>@string/can_edit_text</item>
        <item>@string/can_view_text</item>
        <item>@string/no_access_text</item>
    </string-array>
    <string-array name="owner_access_spinner_text">
        <item>@string/owner_access_text</item>
    </string-array>
    <string-array name="choose_contact_autocomplete">
        <item>Choose from Contacts…</item>
    </string-array>
    <string name="who_has_access_textview">Who has access</string>
    <string name="invalid_email_address_user_warning">Invalid email address</string>
    <string name="deck_not_shared_user_warning">Deck wasn\'t shared. Please try later</string>
    <string name="offline_sharing_disabled_user_warning">Cannot perform operation when app is offline</string>

    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="communicate_menu">Communicate</string>
    <string name="nav_contact_us">Contact Us</string>
    <string name="install_email_app_user_message">Please install Email App</string>
    <string name="feedback_email_subject">Feedback</string>
    <string name="send_email_intent_chooser_message">Send Email</string>
    <string name="invite_friend_intent_chooser_message">Share</string>
    <string name="install_messenger_app_user_message">Please install Messenger app</string>

    <!-- User messages, including warnins dialogs and toasts -->
    <string name="delete_card_warning">Delete card?</string>
    <string name="added_card_user_message">Added</string>
    <string name="updated_card_user_message">Updated</string>
    <string name="n_a">N/A</string>
    <string name="empty_decks_message">Add your decks!</string>
    <string name="no_card_message">All cards are learned</string>
    <string name="sign_out_warning">Are you sure that you want to sign out?</string>
    <string name="search">Search</string>
    <string name="add_reversed_card_checkbox">Add reversed card as well </string>
    <string name="add_extra_reversed_card_message">2 cards are added</string>
    <string name="deck">Deck</string>
    <string name="delete_deck">Delete deck with all cards?</string>
    <string name="back_side_card_hint">Back side</string>
    <string name="front_side_card_hint">Front side</string>
    <string name="install_contact_app_user_message">Please install Contacts App</string>
    <string name="add_cards_with_read_access_user_warning">You cannot add cards with a read access.</string>
    <string name="edit_cards_with_read_access_user_warning">You cannot edit card with a read access.</string>
    <string name="delete_cards_with_read_access_user_warning">You cannot delete card with a read access.</string>
    <string name="share_cards_with_no_access_user_warning">Only owner of deck can share it.</string>
    <string name="not_all_data_loaded_user_warning">Not all data loaded. Please try later</string>

    <!-- Cards type spinner -->
    <string name="cards_type">Deck Type</string>
    <string-array name="deck_type_spinner">
        <item>Basic</item>
        <item>German</item>
        <item>Swiss</item>
    </string-array>
    <string name="decktype_not_exist_user_message">Deck Type wasn\'t changed</string>

    <!-- Force update user messages  -->
    <string name="new_app_version_dialog_title">New version available</string>
    <string name="update_app_user_message">Please update Delern to new version.</string>

    <!-- Markdown -->
    <string name="markdown_textview">Markdown</string>
    <string name="off_switch_text">OFF</string>
    <string name="on_switch_text">ON</string>
    <string name="round_shape_image_contentdescription">Round shaped photo of user who have access to deck</string>

    <!-- Delern App values -->
    <string name="read_access" translatable="false">read</string>
    <string name="owner_access" translatable="false">owner</string>
    <string name="developers_email" translatable="false">feedback@dasfoo.org</string>

    <!-- About App -->
    <string name="nav_about_app">About</string>
    <string name="pref_summary_licenses">Open source licenses</string>
    <string name="pref_title_license">License</string>
    <string name="pref_key_license" translatable="false">license_key</string>
    <string name="pref_version_title">Version</string>

    <!-- LeakCanary (currently only enabled for debug). See also: https://github.com/square/leakcanary/wiki/Customizing-LeakCanary#icon-and-label -->
    <string name="leak_canary_display_activity_label">Delern DEBUG Leaks</string>

    <!-- OnBoarding -->
    <!-- DelernMainActivity -->
    <string name="pref_add_deck_onboarding_key" translatable="false">add_deck_onboarding_key</string>
    <string name="create_deck_onboarding_title">Create your deck</string>
    <string name="create_deck_onboarding_description">Tap here to create your deck</string>
    <!-- AddEditCardActivity -->
    <string name="pref_add_card_onboarding_key" translatable="false">add_card_onboarding_key</string>
    <string name="create_card_onboarding_title">Add front side of the card</string>
    <!-- LearningCardsActivity -->
    <string name="pref_learn_cards_onboarding_key" translatable="false">learn_cards_onboarding_key</string>
    <string name="know_card_onboarding_title">Have you known the card?</string>
    <string name="know_card_onboarding_description">Tap here if you knew the card</string>
    <!-- ShareDeckActivity -->
    <string name="pref_share_deck_onboarding_key" translatable="false">share_deck_onboarding_key</string>
    <string name="share_deck_onboarding_title">Share the deck</string>
    <string name="share_deck_onboarding_description">Type your friend email or chose from Contacts</string>
    <!-- OnBoardingActivity-->
    <string name="pref_first_app_open_onboarding_key" translatable="false">first_app_open_onboarding_key</string>
    <string name="create_deck_onboarding_activity_title">Create decks</string>
    <string name="create_deck_onboarding_activity_description">Create decks with flashcards</string>
    <string name="learn_cards_onboarding_activity_title">Learn</string>
    <string name="learn_cards_onboarding_activity_description">Learn in any place</string>
    <string name="share_with_friends_onboarding_activity">Share decks</string>
    <string name="share_with_friends_onboarding_description">Share decks with friends to learn together</string>

    <!-- Offline -->
    <string name="offline_user_message">You are offline</string>

    <!-- Billing messages -->
    <string name="error_occurred_user_message">Error occurred. Try it later.</string>
    <string name="pay_button">Pay</string>
    <string name="image_icon_sup_dev_content_description">Image</string>
    <string name="pay_button_content_description">Pay Button</string>
    <string name="nav_support_development">Support Development</string>

</resources>
