...
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/learning_card"
        layout="@layout/show_cards_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/borders_margin"
        android:layout_marginStart="@dimen/borders_margin"
...
        app:layout_constraintTop_toTopOf="@+id/turn_card_button"
        app:pressedTranslationZ="@dimen/fab_pressed_elevation"
        app:rippleColor="@color/colorPrimaryDark"
        app:srcCompat="@drawable/ic_check_black_24dp" />

    <TextView
        android:id="@+id/learned_in_session"
        style="@style/SecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/borders_margin"
        android:layout_marginStart="@dimen/borders_margin"
...
